Quorum3/Library/Tests/Templating/Pass/PassIntegerTakesInteger_4.quorum
class Main
    action Main
        Test<integer> something
        something:doSomething(5)
    end
end