Quorum3/Library/Tests/Templating/Fail/main_10.quorum
class Main
    action Main
        C<V>
    end
end
